# freleefty-agit

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env
db/: .dockerignore  Cargo.toml  build.rs  index.d.ts  index.js  package.json
db/.sqlx/: query-0333df8e9b1d1a4eb8fe70abc58f019fb33705530c402170fc8a64329876401d.json  query-03e9624249ff7a2b3d63309eef3e9901d5d583e43a5338a42271d7fed69ab89c.json  query-044c394666e65a2985441acd805cce302878581b7c43d5d92c101ed9a5f9ee79.json  query-061fe1dc896fef95a68c55470cd76c6aa75de2846c39a9638e6a5c68fcbfd926.json  query-07910e1780e55c0ce049523e9c0bc328ba5ea1f7e702a79c819d940c7aea5e15.json  query-0993b0eebe17c4cc54fa5330f56ff88523b6e4afe8b0da3b35367ac535ecfd26.json  query-0d7372b0cba9e558567e5199982ac86dbcef4304cd5d2658cbf120a7651ad309.json  query-0e20be3e9d65fdf5c00dca7a6169644bef1730399e74860a1a1df88516c568e1.json  query-1244803e96e000c68c273bac1a45d5e4d3578844042e3ea72c0bdba1c9f141c6.json  query-165a3395fcb43ee5ecca0ff241339485390be2e5fcf9d49b647537e95b927fee.json  query-172d5ab51d77540cd82f1ae0e732b387028adbd93859560df2e327568d6498e1.json  query-1a60abf737b518007e26cb9f4d3bbe31e7716eb3358a394e62f1a7333359c213.json  query-1bfb142461d371f4408688219f83380d365bbacf20fd20f4e169d0487c4ce36f.json  query-21d11fad749b91281f422e374549a864ec196deb59e116ab267e39b6e413266b.json  query-259212bb98fb8d9641897a4ef6cac93ce5297d2e8ad1710cbee566f5c795dfe6.json  query-29652341a56ed4bdcf3e23501a16c5592523d1960f16263b512a6905d00450af.json  query-2cf4b4e880b2804a0b67ced3795d1cdee61a9f64b509aa6192cfd6812910221d.json  (+64 more)
(+172 files in other folders)
